--- a/oefening-03/index.html
+++ b/oefening-03/index.html
@@ -8,5 +8,22 @@
 <body>
     <h1>Diepgaande lijstjes ook</h1>
     <h2>Hier kunnen we veel structuur in kwijt</h2>
+    <p>In deze lijst gaan we opsommen welke thema's er aan bod komen in dit vak. We geven ze ook ineens een volgorde mee. En enkele onderverdelingen:</p>
+    <ol>
+        <li>HTML</li>
+        <ul>
+            <li>Structuur</li>
+            <li>Tekst</li>
+            <li>Verzijzingen</li>
+            <li>lijsten</li>
+            <li>Afbeeldingen</li>
+        </ul>
+        <li>CSS</li>
+        <ul>
+            <li>Afmetingen</li>
+            <li>Kleuren</li>
+        </ul>
+        <li>Javascript</li>
+    </ol>
 </body>
 </html>
