--- a/oefening-05/index.html
+++ b/oefening-05/index.html
@@ -14,6 +14,14 @@
         <li>Bakboter</li>
         <li>Room</li>
     </ul>
-    
+    <h1>Methode</h1>
+    <ol>
+        <li>Smelt de boter in een pan op een mild vuur.</li>
+        <li>Mix de eieren en de room voorzichtig door elkaar.</li>
+        <li>Wanneer de boter gesmolten is, voeg je het mengsel toe.</li>
+        <li>Na ongeveer 20 seconden vouw je het ei dubbel.</li>
+        <li>Zet het vuur uit en laat her ei langzaam verder bakken.</li>
+        <li>Serveer op een voorverwarmd bord.</li>
+    </ol>
 </body>
 </html>
