Verbetering mbv oplossingen

--- a/oefening-10/index.html
+++ b/oefening-10/index.html
@@ -6,20 +6,42 @@
     <title>Oefening 10</title>
 </head>
 <body>
-    <img src="AP-logo.png" alt="AP-logo" width="100">
-    <br>
-    <a href="">home</a> <a href="">menu-item</a> <a href="">contact</a>
-    <h3>Hooftitel van artikel 1 uit eerste sectie</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur quos natus libero quia nobis provident excepturi illo sapiente! Quod, hic.</p>
-    <h3>Hoofdtitel van artikel 2</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum commodi minima doloremque modi sint officiis facilis, nihil ex nulla sed?</p>
-    <h3>Hoofdtitel van een artikel uit de volgende sectie</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptatum, sint fugiat pariatur quasi minus delectus, rem sequi iusto nam odit, tempore sapiente ipsam magni numquam. Recusandae quibusdam accusamus doloribus aut, inventore voluptates debitis perferendis est quia sunt id cumque!</p>
-    <h2>Een subtitel</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam soluta quos assumenda delectus omnis totam modi ab natus nam maiores ex voluptatibus aliquid quam repudiandae error excepturi, impedit culpa dolorem atque, commodi hic quis sequi harum. Optio, labore! Beatae distinctio eos ratione ex velit a maiores veritatis iusto sint omnis?</p>
-    <h2>En nog een subtitel</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus numquam sint laboriosam temporibus placeat ratione, totam, unde molestias molestiae harum esse cum voluptates earum maxime odit pariatur nostrum eligendi porro eos perferendis eius obcaecati doloremque necessitatibus. Beatae laboriosam enim incidunt sequi voluptates omnis asperiores reprehenderit, excepturi, dolorum quasi amet. Similique.</p>
-    <a href="">Copyright AP</a>
+    <header><img src="AP-logo.png" alt="AP-logo" width="100">
+        <nav>
+            <a href="">home</a> 
+            <a href="">menu-item</a> 
+            <a href="">contact</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <article>
+                <h3>Hooftitel van artikel 1 uit eerste sectie</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur quos natus libero quia nobis provident excepturi illo sapiente! Quod, hic.</p>
+            </article>
+            <article>
+                <h3>Hoofdtitel van artikel 2</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum commodi minima doloremque modi sint officiis facilis, nihil ex nulla sed?</p>
+            </article>
+        </section>
+        <section>
+            <article>
+                <h3>Hoofdtitel van een artikel uit de volgende sectie</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptatum, sint fugiat pariatur quasi minus delectus, rem sequi iusto nam odit, tempore sapiente ipsam magni numquam. Recusandae quibusdam accusamus doloribus aut, inventore voluptates debitis perferendis est quia sunt id cumque!</p>
+            </article>
+            <article>
+                <h2>Een subtitel</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam soluta quos assumenda delectus omnis totam modi ab natus nam maiores ex voluptatibus aliquid quam repudiandae error excepturi, impedit culpa dolorem atque, commodi hic quis sequi harum. Optio, labore! Beatae distinctio eos ratione ex velit a maiores veritatis iusto sint omnis?</p>
+            </article>
+            <article>
+                <h2>En nog een subtitel</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus numquam sint laboriosam temporibus placeat ratione, totam, unde molestias molestiae harum esse cum voluptates earum maxime odit pariatur nostrum eligendi porro eos perferendis eius obcaecati doloremque necessitatibus. Beatae laboriosam enim incidunt sequi voluptates omnis asperiores reprehenderit, excepturi, dolorum quasi amet. Similique.</p>
+            </article>
+        </section>
+    </main>
+    <footer>
+    <a href="https://www.ap.be/">Copyright AP</a>
+    </footer>
 
 </body>
 </html>
